--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,15 @@ fake-useragent==0.1.11
 idna==3.3
 importlib-metadata==4.8.1
 lxml==4.6.4
+multitasking==0.0.9
+numpy==1.21.4
+pandas==1.3.4
 parse==1.19.0
 pyee==8.2.2
 pyppeteer==0.2.6
 pyquery==1.4.3
+python-dateutil==2.8.2
+pytz==2021.3
 requests==2.26.0
 requests-html==0.10.0
 six==1.16.0
@@ -20,4 +25,5 @@ tqdm==4.62.3
 urllib3==1.26.7
 w3lib==1.22.0
 websockets==9.1
+yfinance==0.1.64
 zipp==3.6.0
